--- a/index.html
+++ b/index.html
@@ -23,27 +23,13 @@
 
             <div class="todo-list box">
                 <h2>Incomplete Tasks</h2>
-                <ul id="items">
-                    <li class="item">
-                        <input type="checkbox" /><label>Task Name</label>
-                    </li>
-                    <li class="item">
-                        <input type="checkbox" /><label>Task Name</label>
-                    </li>
-                    <li class="item">
-                        <input type="checkbox" /><label>Task Name</label>
-                    </li>
-                </ul>
+                <ul id="items"></ul>
             </div>
             <!--/todo-list-->
 
             <div class="complete-list box">
                 <h2>Completed Tasks</h2>
-                <ul>
-                    <li class="item">
-                        Task Name <button class="delete">Delete</button>
-                    </li>
-                </ul>
+                <ul></ul>
             </div>
             <!--/complete-list-->
         </section>
